<resources>
    <string name="app_name">Mobile Guard</string>
    <string name="app_logo">app_logo</string>
    <string name="tagline">Guard Your Phone.\nSecure Your Connection.</string>
    <string name="get_started">Get Started!</string>
    <string name="sign_in">Sign In</string>
    <string name="default_web_client_id">578571194563-ng4sa7khc47ek9nsc0kbpf62tguqk0kc.apps.googleusercontent.com</string>
    <string name="menu">menu bar</string>
    <string name="fall_detector">Fall Detector</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="lorem">lorem ipsum</string>
    <string name="profile">profile picture</string>
    <string name="sample_name">Lorem Ipsum Name</string>
    <string name="sample_email">loremipsum@gmail.com</string>
    <string name="left_phone">Left Phone Detector</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="x_axis">X-AXIS:</string>
    <string name="x_axis_value_velocity">" 10.32 m/s\u00B2"</string>
    <string name="x_axis_value_rad">" — rad/s\u00B2"</string>
    <string name="y_axis">Y-AXIS:</string>
    <string name="z_axis">Z-AXIS:</string>
    <string name="acceleration">Acceleration</string>
    <string name="angular_velocity">Angular Velocity</string>
    <string name="gyroscope_warning">sorry but this device does not support gyroscope</string>
    <string name="accelerometer_warning">sorry but this device does not support accelerometer</string>
    <string name="accelerometer_off">Accelerometer feature is turned off</string>
    <string name="invalid_template">Warning Notice</string>
    <string name="invalid_warning">Lorem Ipsum Dolor Sit Amet. Dolores Loromes Calamares</string>
    <string name="okay">Okay</string>
    <string name="inactivity">Inactivity:</string>
    <string name="time_template">60min</string>
    <string name="sleep_mode">Sleep Mode</string>
    <string name="sample_time">8:00 pm</string>
    <string name="sample_time_day">8:00 am</string>
    <string name="left_phone_warning">Left Phone Detector is turned off</string>
    <string name="sleep_mode_text">The device is in sleep mode</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="progress">10%</string>
    <string name="banner">image banner</string>
    <string name="prompt">Hi Welcome to Mobile Guard!</string>
    <string name="button_prompt">Let\'s Get Started</string>
    <string name="name_prompt">What is your name?</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="surname">Surname</string>
    <string name="credentials_prompt">Almost done...</string>
    <string name="say_cheese">Upload a Picture</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="no_image_selected">No image selected yet...</string>
    <string name="next">Next</string>
    <string name="validate">Validate</string>
    <string name="create">Create</string>
    <string name="forgot_password_prompt">Forgot Password</string>
    <string name="time_default">--</string>
    <string name="time_default_mode">min</string>
    <string name="compliant">Your password is compliant!</string>
    <string name="not_compliant">Your password is not compliant! Submit to my authority!</string>
    <string name="password_failed">You will never break into this device!</string>
    <string name="password_success">Congratulations!</string>
    <string name="device_admin_explanation">For experimentation purposes only</string>
    <string name="template">----</string>
    <string name="last_location">Last Location</string>
    <string name="snatch_phone">Snatch Detector</string>
    <string name="location_detector">Location Detector</string>


</resources>