<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fallDetector"
        android:contentDescription="@string/lorem"
        android:icon="@drawable/google"
        app:showAsAction="ifRoom"
        android:title="@string/fall_detector"
        android:enabled="true"/>

    <item
        android:id="@+id/dashboard"
        android:contentDescription="@string/lorem"
        android:icon="@drawable/dashboard_fill0_wght400_grad0_opsz24"
        app:showAsAction="ifRoom"
        android:title="@string/fall_detector"
        android:enabled="true"/>

    <item
        android:id="@+id/phoneLeft"
        android:contentDescription="@string/lorem"
        android:icon="@drawable/google"
        app:showAsAction="ifRoom"
        android:title="@string/left_phone" />
</menu>