<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationActivity"
    android:background="#C1C1C1">



    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#C1C1C1"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            app:navigationIcon="@drawable/baseline_arrow_back_24">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/pexels_cottonbro_3944404"
        android:contentDescription="@string/banner"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintBottom_toTopOf="@+id/information"
        android:minHeight="200dp"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/round_top"
        android:backgroundTint="@color/primary"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/headerPrompt"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/prompt"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            />

        <LinearLayout
            android:id="@+id/namePrompt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:orientation="vertical"
            >

            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_prompt"
                android:textSize="22sp"
                android:textAlignment="center"
                />

            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/black"/>

            <EditText
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                android:id="@+id/nameET"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/primary"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name"
                />
            <EditText
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                android:id="@+id/middleNameET"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/primary"
                android:layout_marginBottom="10dp"
                android:hint="@string/middle_name"
                />
            <EditText
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                android:id="@+id/surnameET"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/primary"
                android:hint="@string/surname"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/credentialsPrompt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:orientation="vertical"
            >

            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credentials_prompt"
                android:textSize="24sp"
                android:textAlignment="center"
                />

            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/black"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">
                <EditText
                    android:textColorHint="@color/black"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="@string/username"
                    android:id="@+id/usernameET"
                    android:autofillHints="username"
                    android:layout_width="match_parent"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/primary_variant"
                    android:layout_height="55dp"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:inputType="text"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">
                <EditText
                    android:textColorHint="@color/black"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="@string/email"
                    android:id="@+id/emailET"
                    android:autofillHints="username"
                    android:layout_width="match_parent"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/primary_variant"
                    android:layout_height="55dp"
                    android:singleLine="true"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/primary"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password"
                app:passwordToggleTint="@color/black"
                app:hintEnabled="false"
                >

                <EditText
                    android:textColorHint="@color/black"
                    android:textColor="@color/white"
                    android:drawableTint="@color/black"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:id="@+id/passwordET"
                    android:autofillHints="password"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/primary_variant"
                    android:hint="@string/password"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/picturePrompt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/say_cheese"
                android:textSize="22sp"
                android:textAlignment="center"
                />

            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/black"/>

            <LinearLayout
                android:id="@+id/imageSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/profilePic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/profile_circle_svgrepo_com"
                    android:contentDescription="@string/profile_picture"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_image_selected"
                    android:textSize="20sp"
                    android:textColor="@color/error"
                    android:id="@+id/fileName"
                    />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/navButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textSize="16sp"
            android:text="@string/button_prompt"
            android:background="@drawable/round_button"
            app:backgroundTint="@color/primary_variant"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>