<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginPage"
    android:background="@color/primary">

    <RelativeLayout
        android:id="@+id/firstPhase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"

        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/baseline_app_blocking_24"
            android:contentDescription="@string/app_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/get_started"
            android:backgroundTint="@color/secondary_variant"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/second_phase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_marginTop="100dp"
            android:id="@+id/logoSecond"
            android:layout_centerHorizontal="true"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/baseline_app_blocking_24"
            android:contentDescription="@string/app_logo"
            />
        <TextView
            android:id="@+id/appName"
            android:layout_below="@+id/logoSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/secondary_variant"
            android:textSize="40sp"
            android:fontFamily="@font/poppins_bold"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <LinearLayout
            android:id="@+id/googleSignIn"
            android:layout_centerHorizontal="true"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:layout_marginBottom="60dp"
            android:layout_alignParentBottom="true"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google"
                android:contentDescription="@string/sign_in_with_google"
                />
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textAlignment="center"
                android:gravity="center"
                android:drawablePadding="10dp"/>
        </LinearLayout>

    </RelativeLayout>
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
    
</RelativeLayout>